2006-11-14  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sensor-api.c (get_sensor_reading): Narrow corner
	case fixes from 2006-11-13.
	
2006-11-13  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-api.h, common/src/ipmi-sdr-api.c,
	ipmi-sel/src/ipmi-sel.c, ipmi-sensors/src/ipmi-sensors.c: Add SDR
	debugging.
	
2006-11-13  Albert Chu <chu11@llnl.gov>

	* configure.ac: We are now at 0.4.beta0.

	* ipmi-sensors/src/Makefile.am: Add libsdr and libsensor dependency check.

	* common/src/ipmi-sdr-api.c (_get_sdr_full_record): Fix corner case.

	* common/src/ipmi-sensor-api.c (get_sensor_reading): Fix corner cases.

	* include/freeipmi/ipmi-sdr-record-types.h: Add additional analog
	format define.
	
2006-11-09  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: updated copying
	section as per latest GNU Evaluation Team's recommendation.
	
	* doc/permissions.texi: removed.

2006-11-06  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.texi, doc/freeipmi-faq.texi: Various updates.
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* NEWS: Split news for users and developers.

	* commons/rc/Makefile.am: Dist missing .h files.

2006-11-06 Anand V. Avati <avati@zresearch.com>

	* bmc-config/src/bmc-config-api.c:
	free fiid_obj after using to get max_channel_users_id

	* bmc-config/src/bmc-config.c:
	free argugments.filename if exists after using it

	* common/src/ipmi-sdr-api.c:
	use getpwuid_r in _get_home_directory() instead of getpwuid
	to avoid mem leak

	* ipmi-sel/src/ipmi-sel.c:
	free sdr_record_list in run_cmd_args after its use
	
2006-11-06  Albert Chu <chu11@llnl.gov>

	* Tagged Release-0_3_0_base.

	* Branched Release-0_3_0_branch.

2006-11-05  Albert Chu <chu11@llnl.gov>

	* ipmipower/src: Move common files to common/src.

	* common/src/Makefile.am, ipmipower/src/Makefile.am: Update for
	new common files library.

        * ipmiconsole/: New library and code.
	
	* doc/freeipmi.texi, Makefile.am, configure.ac, freeipmi.spec.in: