@@ -1,3 +1,8 @@
+2006-11-16  Albert Chu <chu11@llnl.gov>
+
+	* common/src/list.c (list_alloc_aux, list_free_aux): Fix potential
+	mem-leak issue.
+	
 2006-11-14  Albert Chu <chu11@llnl.gov>
 
 	* common/src/ipmi-sensor-api.c (get_sensor_reading): Narrow corner
